fix table layout overflow

--- a/hermit/styles/_content.styl
+++ b/hermit/styles/_content.styl
@@ -102,15 +102,17 @@
     letter-spacing normal
 
   table:not(.js-file-line-container)
+    display block
     border-collapse collapse
     border-spacing 0
     empty-cells show
     width 100%
     max-width 100%
-    @media (max-width 760px)
-      table-layout fixed
-      word-break break-all
-      word-wrap break-word
+    overflow auto
+    // @media (max-width 760px)
+    //   table-layout fixed
+    //   word-break break-all
+    //   word-wrap break-word
     th
       font-weight 700
       vertical-align bottom
